# git-commits

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: dev.py
src/git_commits/: __init__.py  core.py  schemas.py  utils.py
tests/: test_git_commits.py
