[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-commits"
version = "1.0.1"
description = "A Python library for listing Git commits from local repositories with advanced filtering options"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Arjun Adhikari", email = "mailarjunadhikari@gmail.com"}
]
maintainers = [
    {name = "Arjun Adhikari", email = "mailarjunadhikari@gmail.com"}
]
requires-python = ">=3.9"
keywords = ["git", "commits", "version-control", "repository", "history"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    "dateparser>=1.2.1",
    "GitPython>=3.1.40",
    "pytz>=2024.1",
]

[project.urls]
Homepage = "https://adhikariarjun.com.np/git-commits/"
Repository = "https://github.com/thearjun/git-commits"
Documentation = "https://github.com/thearjun/git-commits#readme"
"Bug Tracker" = "https://github.com/thearjun/git-commits/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/git_commits"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "tabulate>=0.9.0",
]
